[tool.poetry]
name = "criacaodearquivos"
version = "0.1.0"
description = "Criação de Arquivos Customizados"
authors = ["Jonas"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
